trm-client changelog
=================

Legend
------
* : fixed
! : changed
+ : added
- : removed

2025-05-08 v4.5.0
-------------------

! trm-core ^6.6.0
! error handling

2025-04-28 v4.4.1
-------------------

* node-r3trans version read

2025-04-28 v4.4.0
-------------------

! trm-core ^6.5.0
! trm-commons ^1.0.0

2025-04-28 v4.3.0
-------------------

! trm-core ^6.4.1

2025-04-23 v4.2.1
-------------------

* node-r3trans version read

2025-02-26 v4.2.0
-------------------

! connect to registry via option
- trm dependencies on client
+ content command
+ pack/import command