@@ -1,3 +1,3 @@
 export type AliasArguments = {
-    systemAlias: string
+    alias?: string
 }
