@@ -13,6 +13,7 @@ Legend
 
 ! trm-core ^6.6.0
 ! error handling
+* alias command/saprouter alias save
 
 2025-04-28 v4.4.1
 -------------------
